--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    Liens "Mes favoris"
+    <table border="1">
+        <tr>
+            <th><a href="https://discord.com/channels/@me">Discord</a></th>
+        </tr>
+    </table>
 </body>
 </html>
