--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     Liens "Mes favoris"
     <table border="1">
         <tr>
-            <th><a href="https://discord.com/channels/@me">Discord</a></th>
+            <th>
+                <a href="https://discord.com/channels/@me">Discord</a>
+                <a href="fr.savefrom.net">YTdownloader</a>
+            </th>
         </tr>
     </table>
 </body>
