--- a/index.html
+++ b/index.html
@@ -13,8 +13,29 @@
         <tr>
             <th>
                 <a href="https://discord.com/channels/@me">Discord</a>
-                <a href="fr.savefrom.net">YTdownloader</a>
+                <a href="https://fr.savefrom.net/348/">YTdownloader</a>
             </th>
+        </tr>
+    </table>
+    <br>
+    Liens Onedrive (ou drives en général)
+    <table border="1">
+        <tr>
+            <a href="https://1drv.ms/f/s!AiXeCOBeL_DkgYAveFykI3kD-68_jA">Images-ISO</a>
+            <a href="https://1drv.ms/f/s!AiXeCOBeL_DkiOcW20x36KwAjpwErA?e=gI7IgV">Code</a>
+            <a href="https://1drv.ms/f/s!AiXeCOBeL_DkgbhkDX4c8cXhoyNbTA">ROMs</a>
+        </tr>
+    </table>
+    <br>
+    Liens dépots GitHub
+    <table border="1">
+        <tr>
+            <a href="https://github.com/Fabexe">Mon-Profil</a>
+            <a href="https://github.com/samuelthomas2774/nxapi">nxapi-(NSO)</a>
+            <a href="https://github.com/frozenpandaman/s3s">s3s-(stat.ink)</a>
+            <a href="https://github.com/pi-hole/pi-hole">Pi-Hole</a>
+            <a href="https://github.com/WilliDieEnte/BetterBlocklist">BlockList-Pi-Hole</a>
+            <a href="https://github.com/massgravel/Microsoft-Activation-Scripts">Microsoft-Activation-Scripts</a>
         </tr>
     </table>
 </body>
