--- a/index.html
+++ b/index.html
@@ -42,5 +42,14 @@
             </th>
         </tr>
     </table>
+    <br>
+    Docs et mémos
+    <table border="1">
+        <tr>
+            <th>
+                <a href="powershell.html">PowerShell</a>
+            </th>
+        </tr>
+    </table>
 </body>
 </html>
