--- a/powershell.html
+++ b/powershell.html
@@ -1,6 +1,6 @@
 <a href="index.html">Page précédente</a>
 <br>
-<table>
+<table border="1">
     <tr>
         <th>
             Suppression de disques
