--- a/powershell.html
+++ b/powershell.html
@@ -1,12 +1,24 @@
-<a href="index.html">Page précédente</a>
-<br>
-<table border="1">
-    <tr>
-        <th>
-            Suppression de disques
-        </th>
-        <th>
-            - Get-Disk //Afficher la liste des disques disponibles
-        </th>
-    </tr>
-</table>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PowerShell</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <a href="index.html">Page précédente</a>
+    <br>
+    <table border="1">
+        <tr>
+            <th>
+                Suppression de disques
+            </th>
+            <th>
+                - Get-Disk //Afficher la liste des disques disponibles
+            </th>
+        </tr>
+    </table>
+</body>
+</html>
