--- a/powershell.html
+++ b/powershell.html
@@ -17,6 +17,7 @@
             </th>
             <th>
                 - Get-Disk //Afficher la liste des disques disponibles
+                - Clear-Disk -Number "chiffre_disque" -RemoveData - RemoveOEM //Supprimer les données d'un disque
             </th>
         </tr>
     </table>
