--- a/powershell.html
+++ b/powershell.html
@@ -16,8 +16,8 @@
                 Suppression de disques
             </th>
             <th>
-                - Get-Disk //Afficher la liste des disques disponibles
-                - Clear-Disk -Number "chiffre_disque" -RemoveData - RemoveOEM //Supprimer les données d'un disque
+                <div>- Get-Disk //Afficher la liste des disques disponibles</div>
+                <div>- Clear-Disk -Number "chiffre_disque" -RemoveData - RemoveOEM //Supprimer les données d'un disque</div>
             </th>
         </tr>
     </table>
