--- a/powershell.html
+++ b/powershell.html
@@ -13,11 +13,11 @@
     <table border="1">
         <tr>
             <th>
-                Suppression de disques
+                <div class="tableau">Suppression de disques</div>
             </th>
             <th>
-                <div>- Get-Disk //Afficher la liste des disques disponibles</div>
-                <div>- Clear-Disk -Number "chiffre_disque" -RemoveData - RemoveOEM //Supprimer les données d'un disque</div>
+                <div class="tableau">- Get-Disk //Afficher la liste des disques disponibles</div>
+                <div class="tableau">- Clear-Disk -Number "chiffre_disque" -RemoveData - RemoveOEM //Supprimer les données d'un disque</div>
             </th>
         </tr>
     </table>
