--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <table border="1">
         <tr>
             <th>
-                <a class="tableau" href="https://discord.com/channels/@me">Discord</a>
-                <a class="tableau" href="https://fr.savefrom.net/348/">YTdownloader</a>
+                <a href="https://discord.com/channels/@me">Discord</a>
+                <a href="https://fr.savefrom.net/348/">YTdownloader</a>
             </th>
         </tr>
     </table>
@@ -22,9 +22,9 @@
     <table border="1">
         <tr>
             <th>
-                <a class="tableau" href="https://1drv.ms/f/s!AiXeCOBeL_DkgYAveFykI3kD-68_jA">Images-ISO</a>
-                <a class="tableau" href="https://1drv.ms/f/s!AiXeCOBeL_DkiOcW20x36KwAjpwErA?e=gI7IgV">Code</a>
-                <a class="tableau" href="https://1drv.ms/f/s!AiXeCOBeL_DkgbhkDX4c8cXhoyNbTA">ROMs</a>
+                <a href="https://1drv.ms/f/s!AiXeCOBeL_DkgYAveFykI3kD-68_jA">Images-ISO</a>
+                <a href="https://1drv.ms/f/s!AiXeCOBeL_DkiOcW20x36KwAjpwErA?e=gI7IgV">Code</a>
+                <a href="https://1drv.ms/f/s!AiXeCOBeL_DkgbhkDX4c8cXhoyNbTA">ROMs</a>
             </th>
         </tr>
     </table>
@@ -33,12 +33,12 @@
     <table border="1">
         <tr>
             <th>
-                <a class="tableau" href="https://github.com/Fabexe">Mon-Profil</a>
-                <a class="tableau" href="https://github.com/samuelthomas2774/nxapi">nxapi-(NSO)</a>
-                <a class="tableau" href="https://github.com/frozenpandaman/s3s">s3s-(stat.ink)</a>
-                <a class="tableau" href="https://github.com/pi-hole/pi-hole">Pi-Hole</a>
-                <a class="tableau" href="https://github.com/WilliDieEnte/BetterBlocklist">BlockList-Pi-Hole</a>
-                <a class="tableau" href="https://github.com/massgravel/Microsoft-Activation-Scripts">Microsoft-Activation-Scripts</a>
+                <a href="https://github.com/Fabexe">Mon-Profil</a>
+                <a href="https://github.com/samuelthomas2774/nxapi">nxapi-(NSO)</a>
+                <a href="https://github.com/frozenpandaman/s3s">s3s-(stat.ink)</a>
+                <a href="https://github.com/pi-hole/pi-hole">Pi-Hole</a>
+                <a href="https://github.com/WilliDieEnte/BetterBlocklist">BlockList-Pi-Hole</a>
+                <a href="https://github.com/massgravel/Microsoft-Activation-Scripts">Microsoft-Activation-Scripts</a>
             </th>
         </tr>
     </table>
@@ -47,7 +47,7 @@
     <table border="1">
         <tr>
             <th>
-                <a class="tableau" href="powershell.html">PowerShell</a>
+                <a href="powershell.html">PowerShell</a>
             </th>
         </tr>
     </table>
