--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <table border="1">
         <tr>
             <th>
-                <a class="tableau" href="powershell.html">PowerShell</a>
+                <a class="tableau" href="https://onedrive.live.com/view.aspx?resid=E4F02F5EE008DE25%21147456&id=documents
+onenote:https://d.docs.live.net/e4f02f5ee008de25/Blocs-note/Mémos/">Accès OneNote</a>
             </th>
         </tr>
     </table>
