Ajout de SplatRoulette 1/2

--- a/index.html
+++ b/index.html
@@ -47,10 +47,19 @@
     <table border="1">
         <tr>
             <th>
-                <a class="tableau" href="https://onedrive.live.com/view.aspx?resid=E4F02F5EE008DE25%21147456&id=documents
-onenote:https://d.docs.live.net/e4f02f5ee008de25/Blocs-note/Mémos/">Accès OneNote</a>
+                <a class="tableau" href="https://onedrive.live.com/view.aspx?resid=E4F02F5EE008DE25%21147456&id=documentsonenote:https://d.docs.live.net/e4f02f5ee008de25/Blocs-note/Mémos/">Accès OneNote</a>
             </th>
         </tr>
     </table>
+    <br>
+    Test de sites Web
+    <table border="1">
+        <tr>
+            <th>
+                <a class="tableau" href="splatroulette/index.html">Splatroulette</a>
+            </th>
+        </tr>
+    </table>
+
 </body>
 </html>
