Update "link to onenote"

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <table border="1">
         <tr>
             <th>
-                <a class="tableau" href="https://onedrive.live.com/view.aspx?resid=E4F02F5EE008DE25%21147456&id=documentsonenote:https://d.docs.live.net/e4f02f5ee008de25/Blocs-note/Mémos/">Accès OneNote</a>
+                <a class="tableau" href="https://1drv.ms/o/s!AiXeCOBeL_DkiYAAU2DkxCeBDVdIUg?e=Mi1uCj">Accès OneNote</a>
             </th>
         </tr>
     </table>
