--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
             <th>
                 <a class="tableau" href="https://1drv.ms/o/s!AiXeCOBeL_DkiYAAU2DkxCeBDVdIUg?e=Mi1uCj">Accès OneNote</a>
             </th>
+            <th>
+                <a class="tableau" href="https://developer.mozilla.org/fr/docs/Web/HTML"> Guide HTML</a>
+                <a class="tableau" href="https://developer.mozilla.org/fr/docs/Web/CSS"> Guide CSS</a>
+                <a class="tableau" href="https://developer.mozilla.org/fr/docs/Web/JavaScript"> Guide JS</a>
+            </th>
         </tr>
     </table>
     <br>
