--- a/splatroulette/index.html
+++ b/splatroulette/index.html
@@ -17,18 +17,33 @@
         </ul>
     </div>
 
-    <div class="overlayTitre">
-        Accueil
+    <div class="overlayTitle">
+        SplatRoulette > Weapons
     </div>
     <br>
-    <div class="overlayTexte">
-        Bienvenue sur la roulette !!!<br>
     </div>
 
-    <h1>Nombre aléatoire : <span id="randomNumber"></span></h1>
-    <p id="randomText"></p>
-    <img id="randomImage" src="" alt="Erreur d'affichage" style="display: none;">
-    <button onclick="generateRandomNumber()">Générer</button>
+    <div class="overlayWeapon">
+        <h1><span id="randomNumber"></span></h1>
+        <p id="randomText"></p>
+        <div class="pictureBorder">
+            <img id="randomWeapon" src="" alt="Picture not found" style="display: none;">
+        </div>
+        <table border="0" style="margin: auto;">
+            <th>
+                <div class="pictureBorder2">
+                    <img id="subWeapon" src="" alt="Picture not found" width="90px" height="90px" style="display: none;">
+                </div>
+            </th>
+            <th>
+                <div class="pictureBorder2">
+                    <img id="specialWeapon" src="" alt="Picture not found" width="90px" height="90px" style="display: none;">
+                </div>
+            </th>
+        </table>
+        <br>
+        <a onclick="generateRandomNumber()" class="button">Generate</a>
+    </div>
 
     <div class="content">
 </body>
