Réduction de l'affichage de Splatroulette

--- a/splatroulette/index.html
+++ b/splatroulette/index.html
@@ -27,17 +27,17 @@
         <h1><span id="randomNumber"></span></h1>
         <p id="randomText"></p>
         <div class="pictureBorder">
-            <img id="randomWeapon" src="" alt="Picture not found" style="display: none;">
+            <img id="randomWeapon" src="" alt="Picture not found" width="200px" style="display: none;">
         </div>
         <table border="0" style="margin: auto;">
             <th>
                 <div class="pictureBorder2">
-                    <img id="subWeapon" src="" alt="Picture not found" width="90px" height="90px" style="display: none;">
+                    <img id="subWeapon" src="" alt="Picture not found" width="50px" height="50px" style="display: none;">
                 </div>
             </th>
             <th>
                 <div class="pictureBorder2">
-                    <img id="specialWeapon" src="" alt="Picture not found" width="90px" height="90px" style="display: none;">
+                    <img id="specialWeapon" src="" alt="Picture not found" width="50px" height="50px" style="display: none;">
                 </div>
             </th>
         </table>
